# expense-tracker-frontend

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  Dockerfile  README.md  ROUTING.md  commands.txt  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  stylelint.config.js  task-README.md  tsconfig.app.json  vite.config.ts
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/config/: config.py
backend/app/models/: expense.py  refresh_tokens.py  reset_codes.py  users.py
backend/app/routers/: auth.py  expenses.py  users.py
backend/app/utils/: auth.py  db.py  email.py  enums.py  middleware.py  reset_codes.py  scheduler.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0bb75ac2fa31_add_refreshtoken_table.py  129f41ffd67c_create_users_and_expenses_tables.py  ffc19567268f_add_reset_codes_table.py
src/: App.tsx  types.ts
src/components/: index.ts
src/components/AuthContent/: index.tsx
src/components/AuthDesktopBackground/: index.tsx
src/components/Button/: index.module.css  index.tsx
src/components/DatePicker/: index.tsx
src/components/Icon/: index.module.css  index.tsx
src/components/Input/: index.module.css  index.tsx
src/hooks/: index.ts
src/pages/: Expenses.tsx  ForgotPassword.tsx  NotFound.tsx  RestorePassword.tsx  SignIn.tsx  SignUp.tsx  Success.tsx  VerificationCode.tsx  auth.css  index.ts
src/routes/: AppRouter.tsx  index.ts
src/utils/: index.ts
(+6 files in other folders)
